
|==================|
|= CHANGELOG GEPI =|
|==================|

Gepi-master (Version de développement)
===========================

Gepi-1.6.4 (01/02/2014)
===========================

Note importante:
  Les fonctions mysql_* de PHP sont marquées obsolètes dans les versions récentes de PHP.
  Il est recommandé de passer à l'utilisation de fonctions mysqli_* de l'extension mysqli.
  Gepi-1.6.4 suit donc les préconisations des développeurs PHP quant à l'abandon de ces fonctions.
  Si vous mettez à jour depuis une version antérieure de Gepi, vous pouvez contrôler 
  dans Gepi si l'extension mysqli est active en vous rendant dans 
     Gestion générale/Configuration serveur/Liste des modules implémentés avec votre PHP
  Le passage à mysqli devrait être transparent pour les utilisateurs, mais il implique de mettre à 
  jour les éventuels plugins mis en place sur votre Gepi.
  Les plugins officiels mis à jour sont disponibles ici: 
     http://www.sylogix.org/projects/gepi/files

Bulletins:
- Bulletins HTML: Possibilité de définir la taille des textes des cellules Avis du conseil de classe et Signature.
- Possibilité de gérer plusieurs fichiers de signature des bulletins.
- Affichage de l'appréciation concernant le groupe classe dans la page Mes moyennes et appréciations.
- Possibilité de modifier l'accès parent/élève aux appréciations depuis les pages 
  de saisie de l'avis du conseil de classe dans le cas où l'accès est basculé manuellement.
- Possibilité de désactiver la recherche de lapsus lors des saisies d'appréciations et avis du conseil de classe.
- Possibilité de proposer des corrections d'appréciations depuis le bulletins et plus seulement depuis la saisie d'appréciations.
- Formatage de l'identité des élèves pour les bulletins.
- Possibilité de faire apparaitre les mentions sur l'export PDF des avis de conseil de classe.
- Mise en évidence des coefficients nuls avant la génération des bulletins (pour repérer un coefficient différent des autres).

Graphes: