@@ -97,6 +97,9 @@ $sql="SELECT id, texte, date_debut, date_fin, date_decompte, auteur, statuts_des
 // pour accueil_simpl_prof.php
 if ((basename($_SERVER['SCRIPT_NAME'])=="accueil_simpl_prof.php") && ($affiche_messages == 'yes')) {
 	echo "<table id='messagerie' summary=\"Ce tableau contient les informations sur lesquelles on souhaite attirer l'attention\">\n";
+	if(isset($liste_evenements)) {
+		echo "<tr><td>".$liste_evenements."</td></tr>";
+	}
 	echo "<tr><td>".$texte_messages_simpl_prof;
 	echo "</td></tr></table>\n";
 	}
