@@ -1174,6 +1174,8 @@ function affiche_date_naissance($date) {
 /**
  *
  * @global mixed 
+ * @global mixed 
+ * @global mixed 
  * @return boolean TRUE si on a une nouvelle version 
  */
 function test_maj() {
@@ -1182,10 +1184,12 @@ function test_maj() {
 
     if ($version_old =='') {
        return TRUE;
+       die();
    }
    if ($gepiVersion > $version_old) {
         // On a une nouvelle version stable
        return TRUE;
+       die();
    }
    return FALSE;
 }
@@ -5089,15 +5093,27 @@ function check_mail($email,$mode='simple',$test_mail="n") {
  * et à retourner une date au format jj/mm/aaaa
  * 
  * @param date $mysql_date date (aaaa-mm-jj HH:MM:SS)
+ * @param string $avec_nom_jour court, complet ou vide
  * @return string  date (jj/mm/aaaa)
  * @todo on a déjà cette fonction
  */
-function get_date_slash_from_mysql_date($mysql_date) {
+function get_date_slash_from_mysql_date($mysql_date, $avec_nom_jour="") {
 	$tmp_tab=explode(" ",$mysql_date);
 	if(isset($tmp_tab[0])) {
 		$tmp_tab2=explode("-",$tmp_tab[0]);
 		if(isset($tmp_tab2[2])) {
-			return $tmp_tab2[2]."/".$tmp_tab2[1]."/".$tmp_tab2[0];
+			$jour="";
+			if($avec_nom_jour!="") {
+				$instant=mktime(12, 0, 0, $tmp_tab2[1], $tmp_tab2[2], $tmp_tab2[0]);
+				if($avec_nom_jour=="court") {
+					$jour=strftime("%a", $instant)." ";
+				}
+				else {
+					$jour=strftime("%A", $instant)." ";
+				}
+			}
+
+			return $jour.$tmp_tab2[2]."/".$tmp_tab2[1]."/".$tmp_tab2[0];
 		}
 		else {
 			return "Date '".$tmp_tab[0]."' mal formatée?";
@@ -9167,4 +9183,256 @@ function get_nom_statut_autre($id_statut, $login_user="") {
 		return "";
 	}
 }
+
+
+function afficher_les_evenements($afficher_obsolete="n") {
+	global $gepiPath;
+	$retour="";
+
+	if($afficher_obsolete=="y") {
+		if($_SESSION['statut']=='professeur') {
+			$sql="SELECT DISTINCT ddec.id_ev FROM d_dates_evenements dde, d_dates_evenements_classes ddec, d_dates_evenements_utilisateurs ddeu WHERE ddeu.statut='professeur' AND ddeu.id_ev=dde.id_ev AND dde.id_ev=ddec.id_ev AND id_classe IN (SELECT DISTINCT jgc.id_classe FROM j_groupes_classes jgc, j_groupes_professeurs jgp WHERE jgc.id_groupe=jgp.id_groupe AND jgp.login='".$_SESSION['login']."');";
+		}
+		elseif($_SESSION['statut']=='cpe') {
+			$sql="SELECT DISTINCT ddec.id_ev FROM d_dates_evenements dde, d_dates_evenements_classes ddec, d_dates_evenements_utilisateurs ddeu WHERE ddeu.statut='cpe' AND ddeu.id_ev=dde.id_ev AND dde.id_ev=ddec.id_ev AND id_classe IN (SELECT DISTINCT jec.id_classe FROM j_eleves_classes jec, j_eleves_cpe jecpe WHERE jec.e_login=jecpe.cpe_login AND jecpe.cpe_login='".$_SESSION['login']."');";
+		}
+		elseif($_SESSION['statut']=='scolarite') {
+			$sql="SELECT DISTINCT ddec.id_ev FROM d_dates_evenements dde, d_dates_evenements_classes ddec, d_dates_evenements_utilisateurs ddeu WHERE ddeu.statut='scolarite' AND ddeu.id_ev=dde.id_ev AND dde.id_ev=ddec.id_ev AND id_classe IN (SELECT DISTINCT jsc.id_classe FROM j_scol_classes jsc WHERE jsc.login='".$_SESSION['login']."');";
+		}
+	}
+	else {
+		if($_SESSION['statut']=='professeur') {
+			$sql="SELECT DISTINCT ddec.id_ev FROM d_dates_evenements dde, d_dates_evenements_classes ddec, d_dates_evenements_utilisateurs ddeu WHERE ddeu.statut='professeur' AND ddeu.id_ev=dde.id_ev AND dde.id_ev=ddec.id_ev AND ddec.date_evenement>='".strftime("%Y-%m-%d %H:%M:%S", time()-12*3600)."' AND id_classe IN (SELECT DISTINCT jgc.id_classe FROM j_groupes_classes jgc, j_groupes_professeurs jgp WHERE jgc.id_groupe=jgp.id_groupe AND jgp.login='".$_SESSION['login']."');";
+		}
+		elseif($_SESSION['statut']=='cpe') {
+			$sql="SELECT DISTINCT ddec.id_ev FROM d_dates_evenements dde, d_dates_evenements_classes ddec, d_dates_evenements_utilisateurs ddeu WHERE ddeu.statut='cpe' AND ddeu.id_ev=dde.id_ev AND dde.id_ev=ddec.id_ev AND ddec.date_evenement>='".strftime("%Y-%m-%d %H:%M:%S", time()-12*3600)."' AND id_classe IN (SELECT DISTINCT jec.id_classe FROM j_eleves_classes jec, j_eleves_cpe jecpe WHERE jec.e_login=jecpe.cpe_login AND jecpe.cpe_login='".$_SESSION['login']."');";
+		}
+		elseif($_SESSION['statut']=='scolarite') {
+			$sql="SELECT DISTINCT ddec.id_ev FROM d_dates_evenements dde, d_dates_evenements_classes ddec, d_dates_evenements_utilisateurs ddeu WHERE ddeu.statut='scolarite' AND ddeu.id_ev=dde.id_ev AND dde.id_ev=ddec.id_ev AND ddec.date_evenement>='".strftime("%Y-%m-%d %H:%M:%S", time()-12*3600)."' AND id_classe IN (SELECT DISTINCT jsc.id_classe FROM j_scol_classes jsc WHERE jsc.login='".$_SESSION['login']."');";
+		}
+	}
+
+	$res=mysqli_query($GLOBALS["mysqli"], $sql);
+	if(mysqli_num_rows($res)>0) {
+		while($lig=mysqli_fetch_object($res)) {
+			$retour.="<div style='border: 1px solid grey; background-image: url(\"$gepiPath/images/background/opacite50.png\");padding: 3px;margin: 3px;'>";
+			//$retour.="$sql<br />";
+			$retour.=affiche_evenement($lig->id_ev, $afficher_obsolete);
+			$retour.="</div>";
+		}
+	}
+	else {
+		$retour.="<div style='border: 1px solid grey; background-image: url(\"$gepiPath/images/background/opacite50.png\");padding: 3px;margin: 3px;'>";
+		//$retour.="$sql<br />";
+		$retour.="<span style='color:red'>Aucune classe n'est associée à l'événement.</span>";
+		$retour.="</div>";
+	}
+	return $retour;
+}
+
+function affiche_evenement($id_ev, $afficher_obsolete="n") {
+	global $gepiPath;
+	$retour="";
+
+	$sql="SELECT * FROM d_dates_evenements WHERE id_ev='$id_ev';";
+	$res=mysqli_query($GLOBALS["mysqli"], $sql);
+	if(mysqli_num_rows($res)>0) {
+		$lig=mysqli_fetch_object($res);
+
+		$tab_u=array();
+		$sql="SELECT * FROM d_dates_evenements_utilisateurs WHERE id_ev='$id_ev';";
+		$res_u=mysqli_query($GLOBALS["mysqli"], $sql);
+		if(mysqli_num_rows($res_u)>0) {
+			while($lig_u=mysqli_fetch_object($res_u)) {
+				$tab_u[]=$lig_u->statut;
+			}
+		}
+
+		if($lig->type=='autre') {
+			//$retour.=nl2br($lig->description)."<br />";
+			$retour.=$lig->texte_avant;
+			//$retour.="<br />";
+
+			if(in_array("professeur", $tab_u)) {
+				$retour.=" <img src='$gepiPath/images/icons/prof.png' class='icone16' alt='Prof' title=\"Professeurs de la classe.\" />";
+			}
+			if(in_array("cpe", $tab_u)) {
+				$retour.=" <img src='$gepiPath/images/icons/cpe.png' class='icone16' alt='Cpe' title=\"CPE de la classe.\" />";
+			}
+			if(in_array("scolarite", $tab_u)) {
+				$retour.=" <img src='$gepiPath/images/icons/scolarite.png' class='icone16' alt='Scol' title=\"Comptes scolarité associés à la classe.\" />";
+			}
+			$retour.="<br />";
+
+			if($afficher_obsolete=="y") {
+				if($_SESSION['statut']=='professeur') {
+					$sql="SELECT * FROM d_dates_evenements_classes d, classes c WHERE id_ev='$id_ev' AND d.id_classe=c.id AND id_classe IN (SELECT DISTINCT jgc.id_classe FROM j_groupes_classes jgc, j_groupes_professeurs jgp WHERE jgc.id_groupe=jgp.id_groupe AND jgp.login='".$_SESSION['login']."') ORDER BY date_evenement, classe;";
+				}
+				elseif($_SESSION['statut']=='cpe') {
+					$sql="SELECT * FROM d_dates_evenements_classes d, classes c WHERE id_ev='$id_ev' AND d.id_classe=c.id AND id_classe IN (SELECT DISTINCT jec.id_classe FROM j_eleves_classes jec, j_eleves_cpe jecpe WHERE jec.e_login=jecpe.cpe_login AND jecpe.cpe_login='".$_SESSION['login']."') ORDER BY date_evenement, classe;";
+				}
+				elseif($_SESSION['statut']=='scolarite') {
+					$sql="SELECT * FROM d_dates_evenements_classes d, classes c WHERE id_ev='$id_ev' AND d.id_classe=c.id AND id_classe IN (SELECT DISTINCT jsc.id_classe FROM j_scol_classes jsc WHERE jsc.login='".$_SESSION['login']."') ORDER BY date_evenement, classe;";
+				}
+				elseif($_SESSION['statut']=='administrateur') {
+					$sql="SELECT * FROM d_dates_evenements_classes d, classes c WHERE id_ev='$id_ev' AND d.id_classe=c.id ORDER BY date_evenement, classe;";
+				}
+			}
+			else {
+				// 12h après
+				if($_SESSION['statut']=='professeur') {
+					$sql="SELECT * FROM d_dates_evenements_classes d, classes c WHERE id_ev='$id_ev' AND d.id_classe=c.id AND date_evenement>='".strftime("%Y-%m-%d %H:%M:%S", time()-12*3600)."' AND id_classe IN (SELECT DISTINCT jgc.id_classe FROM j_groupes_classes jgc, j_groupes_professeurs jgp WHERE jgc.id_groupe=jgp.id_groupe AND jgp.login='".$_SESSION['login']."') ORDER BY date_evenement, classe;";
+				}
+				elseif($_SESSION['statut']=='cpe') {
+					$sql="SELECT * FROM d_dates_evenements_classes d, classes c WHERE id_ev='$id_ev' AND d.id_classe=c.id AND date_evenement>='".strftime("%Y-%m-%d %H:%M:%S", time()-12*3600)."' AND id_classe IN (SELECT DISTINCT jec.id_classe FROM j_eleves_classes jec, j_eleves_cpe jecpe WHERE jec.e_login=jecpe.cpe_login AND jecpe.cpe_login='".$_SESSION['login']."') ORDER BY date_evenement, classe;";
+				}
+				elseif($_SESSION['statut']=='scolarite') {
+					$sql="SELECT * FROM d_dates_evenements_classes d, classes c WHERE id_ev='$id_ev' AND d.id_classe=c.id AND date_evenement>='".strftime("%Y-%m-%d %H:%M:%S", time()-12*3600)."' AND id_classe IN (SELECT DISTINCT jsc.id_classe FROM j_scol_classes jsc WHERE jsc.login='".$_SESSION['login']."') ORDER BY date_evenement, classe;";
+				}
+				elseif($_SESSION['statut']=='administrateur') {
+					$sql="SELECT * FROM d_dates_evenements_classes d, classes c WHERE id_ev='$id_ev' AND d.id_classe=c.id AND date_evenement>='".strftime("%Y-%m-%d %H:%M:%S", time()-12*3600)."' ORDER BY date_evenement, classe;";
+				}
+			}
+			$res2=mysqli_query($GLOBALS["mysqli"], $sql);
+			if(mysqli_num_rows($res2)>0) {
+				while($lig2=mysqli_fetch_object($res2)) {
+					if($lig2->date_evenement<strftime("%Y-%m-%d %H:%M:%S")) {
+						$retour.="<span style='color:red'>".$lig2->classe."&nbsp;: ".formate_date($lig2->date_evenement, "y")."</span><br />";
+					}
+					else {
+						$retour.=$lig2->classe."&nbsp;: ".formate_date($lig2->date_evenement, "y")."<br />";
+					}
+				}
+			}
+			$retour.=$lig->texte_apres;
+		}
+		elseif($lig->type=='conseil_de_classe') {
+
+			$retour.=$lig->texte_avant;
+			//$retour.="<br />";
+
+			if($afficher_obsolete=="y") {
+				if($_SESSION['statut']=='professeur') {
+					$sql="SELECT * FROM d_dates_evenements_classes d, classes c WHERE id_ev='$id_ev' AND d.id_classe=c.id AND id_classe IN (SELECT DISTINCT jgc.id_classe FROM j_groupes_classes jgc, j_groupes_professeurs jgp WHERE jgc.id_groupe=jgp.id_groupe AND jgp.login='".$_SESSION['login']."') ORDER BY date_evenement, classe;";
+				}
+				elseif($_SESSION['statut']=='cpe') {
+					$sql="SELECT * FROM d_dates_evenements_classes d, classes c WHERE id_ev='$id_ev' AND d.id_classe=c.id AND id_classe IN (SELECT DISTINCT jec.id_classe FROM j_eleves_classes jec, j_eleves_cpe jecpe WHERE jec.e_login=jecpe.cpe_login AND jecpe.cpe_login='".$_SESSION['login']."') ORDER BY date_evenement, classe;";
+				}
+				elseif($_SESSION['statut']=='scolarite') {
+					$sql="SELECT * FROM d_dates_evenements_classes d, classes c WHERE id_ev='$id_ev' AND d.id_classe=c.id AND id_classe IN (SELECT DISTINCT jsc.id_classe FROM j_scol_classes jsc WHERE jsc.login='".$_SESSION['login']."') ORDER BY date_evenement, classe;";
+				}
+				elseif($_SESSION['statut']=='administrateur') {
+					$sql="SELECT * FROM d_dates_evenements_classes d, classes c WHERE id_ev='$id_ev' AND d.id_classe=c.id ORDER BY date_evenement, classe;";
+				}
+			}
+			else {
+				// 12h après
+				if($_SESSION['statut']=='professeur') {
+					$sql="SELECT * FROM d_dates_evenements_classes d, classes c WHERE id_ev='$id_ev' AND d.id_classe=c.id AND date_evenement>='".strftime("%Y-%m-%d %H:%M:%S", time()-12*3600)."' AND id_classe IN (SELECT DISTINCT jgc.id_classe FROM j_groupes_classes jgc, j_groupes_professeurs jgp WHERE jgc.id_groupe=jgp.id_groupe AND jgp.login='".$_SESSION['login']."') ORDER BY date_evenement, classe;";
+				}
+				elseif($_SESSION['statut']=='cpe') {
+					$sql="SELECT * FROM d_dates_evenements_classes d, classes c WHERE id_ev='$id_ev' AND d.id_classe=c.id AND date_evenement>='".strftime("%Y-%m-%d %H:%M:%S", time()-12*3600)."' AND id_classe IN (SELECT DISTINCT jec.id_classe FROM j_eleves_classes jec, j_eleves_cpe jecpe WHERE jec.e_login=jecpe.cpe_login AND jecpe.cpe_login='".$_SESSION['login']."') ORDER BY date_evenement, classe;";
+				}
+				elseif($_SESSION['statut']=='scolarite') {
+					$sql="SELECT * FROM d_dates_evenements_classes d, classes c WHERE id_ev='$id_ev' AND d.id_classe=c.id AND date_evenement>='".strftime("%Y-%m-%d %H:%M:%S", time()-12*3600)."' AND id_classe IN (SELECT DISTINCT jsc.id_classe FROM j_scol_classes jsc WHERE jsc.login='".$_SESSION['login']."') ORDER BY date_evenement, classe;";
+				}
+				elseif($_SESSION['statut']=='administrateur') {
+					$sql="SELECT * FROM d_dates_evenements_classes d, classes c WHERE id_ev='$id_ev' AND d.id_classe=c.id AND date_evenement>='".strftime("%Y-%m-%d %H:%M:%S", time()-12*3600)."' ORDER BY date_evenement, classe;";
+				}
+			}
+			$res2=mysqli_query($GLOBALS["mysqli"], $sql);
+			if(mysqli_num_rows($res2)>0) {
+				// On va remplir un tableau et repérer les jours et heures.
+				$tab_jours=array();
+				$tab_heures=array();
+				$tab_cellules=array();
+				while($lig2=mysqli_fetch_object($res2)) {
+					$tmp_jour=get_date_slash_from_mysql_date($lig2->date_evenement, "court");
+					if(!in_array($tmp_jour, $tab_jours)) {
+						$tab_jours[]=$tmp_jour;
+					}
+					sort($tab_jours);
+
+					$tmp_tab_pp=get_tab_prof_suivi($lig2->id_classe);
+					//$liste_pp=implode(", ", $tmp_tab_pp);
+					$liste_pp="";
+					for($loop=0;$loop<count($tmp_tab_pp);$loop++) {
+						if($loop>0) {
+							$liste_pp.="";
+						}
+						$liste_pp.=affiche_utilisateur($tmp_tab_pp[$loop], $lig2->id_classe);
+					}
+
+					$tmp_heure=get_heure_2pt_minute_from_mysql_date($lig2->date_evenement);
+					if(!in_array($tmp_heure, $tab_heures)) {
+						$tab_heures[]=$tmp_heure;
+					}
+					sort($tab_heures);
+
+					if($lig2->date_evenement<strftime("%Y-%m-%d %H:%M:%S")) {
+						$tab_cellules[$tmp_jour][$tmp_heure]="<span style='color:red' title=\"La date du conseil de classe de $lig2->classe est passée : ".formate_date($lig2->date_evenement, "y")."
+".ucfirst(getSettingValue('gepi_prof_suivi'))." : $liste_pp\">".$lig2->classe."</span><br />";
+					}
+					else {
+						$tab_cellules[$tmp_jour][$tmp_heure]="<span title=\"Date du conseil de classe de $lig2->classe : ".formate_date($lig2->date_evenement, "y")."
+".ucfirst(getSettingValue('gepi_prof_suivi'))." : $liste_pp\">".$lig2->classe."</span><br />";
+					}
+				}
+
+				$retour.="<table class='boireaus boireaus_alt' summary='Dates de conseils de classe'>
+	<thead>
+		<tr>
+			<th>";
+
+
+				if(in_array("professeur", $tab_u)) {
+					$retour.=" <img src='$gepiPath/images/icons/prof.png' class='icone16' alt='Prof' title=\"Professeurs de la classe.\" />";
+				}
+				if(in_array("cpe", $tab_u)) {
+					$retour.=" <img src='$gepiPath/images/icons/cpe.png' class='icone16' alt='Cpe' title=\"CPE de la classe.\" />";
+				}
+				if(in_array("scolarite", $tab_u)) {
+					$retour.=" <img src='$gepiPath/images/icons/scolarite.png' class='icone16' alt='Scol' title=\"Comptes scolarité associés à la classe.\" />";
+				}
+				//$retour.="<br />";
+
+				$retour.="</th>";
+				for($j=0;$j<count($tab_jours);$j++) {
+					$retour.="
+			<th>".$tab_jours[$j]."</th>";
+				}
+				$retour.="
+	</thead>
+	<tbody>";
+
+				for($i=0;$i<count($tab_heures);$i++) {
+					$retour.="
+		<tr>
+			<th>".$tab_heures[$i]."</th>";
+
+					for($j=0;$j<count($tab_jours);$j++) {
+						$retour.="
+			<td>";
+						if(isset($tab_cellules[$tab_jours[$j]][$tab_heures[$i]])) {
+							$retour.=$tab_cellules[$tab_jours[$j]][$tab_heures[$i]];
+						}
+						$retour.="</td>";
+					}
+					$retour.="
+		</tr>";
+
+				}
+				$retour.="
+	</tbody>
+</table>";
+
+			}
+			$retour.=$lig->texte_apres;
+
+		}
+	}
+
+	return $retour;
+}
+
 ?>
